--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- header-navigation -->
         <div class="container z-index">
             <nav id="navbar-header" class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="index.html">Vins Fitness</a>
+                <a class="navbar-brand" href="index.html">Vins FitnessTest</a>
                 <button class="responsive-nav-btn navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="ion-navicon"></span>
@@ -132,7 +132,7 @@
                                     <polygon fill="#fff" points="0 0, 1000 0, 1000 1000, 150 1000"></polygon>
                                 </clipPath>
                             </defs>
-                            <image width="530" height="360" xlink:href="img/about-us/front-img.png" clip-path="url(#polygonView)" />
+                            <image width="530" height="360" xlink:href="img/about-us/front-img1.jpg" clip-path="url(#polygonView)" />
 
                         </svg>
                     </div>
