insta link given

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                             <p>&copy; Copyright 2018 - All rights reserved <a href="#">Vins Fitness</a></p>
                             <div class="footer-social">
                                 <ul>
-                                    <li><a href="#"><i class="social-icon ion-social-instagram"></i></a></li>
+                                    <li><a href="https://www.instagram.com/vinu_radhakrishnan/"><i class="social-icon ion-social-instagram"></i></a></li>
                                     <li><a href="#"><i class="social-icon ion-social-facebook"></i></a></li>
                                 </ul>
                             </div>
