--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 
 <body id="wrap" data-spy='scroll' data-target='#navbar-header' data-offset='0'>
     <!-- preloader-wrapper start -->
-    <div class="preloader-wrapper">
+    <!-- <div class="preloader-wrapper">
         <div class="spinner"></div>
-    </div>
+    </div> -->
     <!-- preloader-wrapper end -->
 
     <!-- Header-area -->
     <header id="header-area" data-scroll-index="0">
         <!-- video background -->
-        <div class="header-video-bg">
+        <!-- <div class="header-video-bg">
             <video class="bg-video" poster="img/bg/1.jpeg" autoplay="" loop="" muted="">
                 <source src="video/vid3.mp4">
             </video>
-        </div>
+        </div> -->
 
         <!-- header-navigation -->
         <div class="container z-index">
