--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <!-- Header-area -->
     <header id="header-area" data-scroll-index="0">
         <!-- video background -->
-        <!-- <div class="header-video-bg">
+        <div class="header-video-bg">
             <video class="bg-video" poster="img/bg/1.jpeg" autoplay="" loop="" muted="">
                 <source src="video/vid3.mp4">
             </video>
-        </div> -->
+        </div>
 
         <!-- header-navigation -->
         <div class="container z-index">
