--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- video background -->
         <div class="header-video-bg">
             <video class="bg-video" poster="img/bg/1.jpeg" autoplay="" loop="" muted="">
-                <source src="video/vid3.mp4">
+                <!-- <source src="video/vid3.mp4"> -->
             </video>
         </div>
 
