--- a/index.html
+++ b/index.html
@@ -21,8 +21,23 @@
     <link rel="stylesheet" href="css/responsive.css">
 
 </head>
-
+<!-- WhatsHelp.io widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "8075232199", // WhatsApp number
+            call_to_action: "Message us", // Call to action
+            position: "right", // Position may be 'right' or 'left'
+        };
+        var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
+<!-- /WhatsHelp.io widget -->
 <body id="wrap" data-spy='scroll' data-target='#navbar-header' data-offset='0'>
+
     <!-- preloader-wrapper start -->
     <!-- <div class="preloader-wrapper">
         <div class="spinner"></div>
