--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "8075232199", // WhatsApp number
+            whatsapp: "+91 97409 95216", // WhatsApp number
             call_to_action: "Message us", // Call to action
             position: "right", // Position may be 'right' or 'left'
         };
