--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- header-navigation -->
         <div class="container z-index">
             <nav id="navbar-header" class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="index.html">Vins FitnessTest</a>
+                <a class="navbar-brand" href="index.html">Vins Fitness</a>
                 <button class="responsive-nav-btn navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="ion-navicon"></span>
