--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         var options = {
             whatsapp: "+91 97409 95216", // WhatsApp number
             call_to_action: "Message us", // Call to action
-            position: "right", // Position may be 'right' or 'left'
+            position: "left", // Position may be 'right' or 'left'
         };
         var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
         var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
