link to 1 year coaching has been updated

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <p>12 Months Support</p>
                         <p>Consultation Call</p>
                         <p>Coaching included</p>
-                        <p><a href="https://www.instamojo.com/@vinsftiness/l4afef473d7844c5aa68a194c4d28469f/" rel="im-checkout"
+                        <p><a href="https://imjo.in/f8nPnC" rel="im-checkout"
                                 data-behaviour="remote" data-style="flat" data-text="PAY NOW"></a></p>
                     </div>
                 </div>
