--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                         <p>12 Months Support</p>
                         <p>Consultation Call</p>
                         <p>Coaching included</p>
-                        <p><a href="https://imjo.in/f8nPnC" rel="im-checkout"
-                                data-behaviour="remote" data-style="flat" data-text="PAY NOW"></a></p>
+                        <p><a href="https://www.instamojo.com/@vinsftiness/la9531474f52d4659b132cff76f21dc30/" rel="im-checkout" data-behaviour="remote"
+                            data-style="flat-dark" data-text="PAY NOW"></a></p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
