--- a/index.html
+++ b/index.html
@@ -115,24 +115,12 @@
                     <div class="aboutus-text">
                         <h3>About Me</h3>
                         <p>I am Vinu. </p>
-                        <p>Software Engineer by profession. Personal fitness trainer by passion.
-                        </p>
                         <p>
-                            Fitness is defined as the quality or state of being fit. Around 1950, perhaps consistent
-                            with the Industrial
-                            Revolution and the treatise of World War II, the term "fitness" increased in western
-                            vernacular by a factor of ten.
-                            The modern definition of fitness describes either a person or machine's ability to perform
-                            a specific function or a
-                            holistic definition of human adaptability to cope with various situations. This has led to
-                            an interrelation of human
-                            fitness and attractiveness that has mobilized global fitness and fitness equipment
-                            industries. Regarding specific
-                            function, fitness is attributed to persons who possess significant aerobic or anaerobic
-                            ability, i.e. endurance or
-                            strength. A well-rounded fitness program improves a person in all aspects of fitness
-                            compared to practicing only one,
-                            such as only cardio/respiratory endurance or only weight training.
+                
+                        I help people meet their fitness goals in the most efficient way. Fitness has been a part of my lifestyle from a very
+                        early age. Over 10 years of experience in lifting weights/ working out, I have learnt a lot from my mistakes. Now, I
+                        stand as an ISSA certified fitness trainer and I want to help you achieve your better version in the best way possible.
+
                         </p>
 
 
@@ -188,7 +176,6 @@
                     <div class="section-heading">
                         <h2>SUBSCRIPTION<span class="section-heading-style"></span></h2>
                         <p>Select a plan suits for you.</p>
-                        <p><b>QUERIES? Text me @ </b> </p>
                     </div>
                 </div>
             </div>
